# music-visualizer

./: .dockerignore  .gitignore  .oxlintrc.json  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.naga  Dockerfile.server  LICENSE  README.md  VISION.md  bump.config.ts  bunfig.toml  docker-compose.server.yml  electrobun.config.ts  lex.config.ts  package.json  tsconfig.json
.agents/skills/diff-screenshots/: SKILL.md
.agents/skills/new-pack/: SKILL.md
.agents/skills/publish-pack/: SKILL.md
.agents/skills/screenshot-debug/: SKILL.md
.agents/skills/shader-check/: SKILL.md
.claude/skills/new-pack/: SKILL.md
.github/workflows/: build.yml  docker-image.yml  docker-server.yml  naga-image.yml  render-packs.yml
lexicons/: pack.json  release.json  star.json
patches/: electrobun@1.18.1.patch
scripts/: build-audiocap.ts  build-gallery.ts  build-packs.ts  check-shader.ts  headless-shim.c  render-pack-debug.ts  render-pack.ts  test-packs-gpu.ts
src/: types.d.ts
src/bun/: index.ts  paths.ts  window-prefs.ts
src/bun/audio/: capture.ts
src/bun/db/: index.ts  migrations.ts
src/bun/engine/: feature-smoother.ts  render-frame.ts  transitions.ts  uniform-writer.ts
src/bun/gpu/: electrobun-gpu.ts  pipeline.ts  renderer.ts  transition.ts
src/bun/packs/: glsl-preprocess.test.ts  hash.ts  headless-render.ts  import.test.ts  (+8 more)
src/mainview/: index.css  index.html  index.ts
src/native/audiocap/: .gitignore  Cargo.toml
src/native/audiocap/src/: main.rs
src/packs/: render.test.ts
src/shared/: rpc-types.ts
visualizer/: electrobun.config.ts  package.json
(+110 files in other folders)
